corrected the button colors

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="story-img">
               <img src="./assets/story-2.png" />
             </div>
-            <button  class="date-btn">November 19, 2019</button>
+            <button  class="date-btn btn-green">November 19, 2019</button>
             <h4 class="story-heading">
               Find out if a school fits the<br />
               family's needs
@@ -140,7 +140,7 @@
             <div class="story-img">
               <img src="./assets/story-3.png" />
             </div>
-            <button class="date-btn">November 19, 2019</button>
+            <button class="date-btn btn-purple">November 19, 2019</button>
             <h4 class="story-heading">
               Summer math & literacy<br />
               centres for kids
@@ -151,7 +151,7 @@
             <div class="story-img">
               <img src="./assets/story-4.png" />
             </div>
-            <button class="date-btn">November 19, 2019</button>
+            <button class="date-btn btn-purple">November 19, 2019</button>
             <h4 class="story-heading">
               Classroom management<br />
               techniques for new tutors
@@ -162,7 +162,7 @@
             <div class="story-img">
               <img src="./assets/story-5.png" />
             </div>
-            <button class="date-btn">November 19, 2019</button>
+            <button class="date-btn btn-green">November 19, 2019</button>
             <h4 class="story-heading">
               Conversation rhymes<br />
               improve kids listening
